# impactstudy

./: Correlated Features.ipynb  Experiment 1.ipynb  Experiment 10.ipynb  Experiment 2.ipynb  Experiment 3.ipynb  Experiment 4.ipynb  Experiment 5.ipynb  Experiment 6.5.ipynb  Experiment 6.75.ipynb  Experiment 6.ipynb  Experiment 7.ipynb  Experiment 8.ipynb  Experiment 9.ipynb  Experiment Type 1.ipynb  Kitchen Sink EBM.ipynb  Kitchen Sink.ipynb  _Overview.ipynb  pyproject.toml
.github/workflows/: unit-test.yml
impactstudy/: __init__.py  experiment.py
notebooks/: _Overview.ipynb
tests/: test_experiment.py
