[tool.poetry]
name = "impactstudy"
version = "0.1.0"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
impactchart = "^0.4.3"
usingversion = "^0.1.2"
jupyterlab = "^4.1.2"
pandas = "^2.2.1"
pyarrow = "^15.0.0"
ipywidgets = "^8.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^3.0.0"
nbmake = "^1.3.5"
scikit-image = "^0.22.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.14"
flake8 = "^7.0.0"
black = {extras = ["jupyter"], version="^24.1.0"}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
